Lower z-index below the one introduced by the plone-modal in order to fix overlaying issues.

--- a/mockup/patterns/relateditems/pattern.relateditems.less
+++ b/mockup/patterns/relateditems/pattern.relateditems.less
@@ -38,7 +38,7 @@
   font-size: 12px;
   border: 1px solid #aaa;
   border-bottom-style: none;
-  z-index: 9999;
+  z-index: 999;
   position: relative;
   padding: 0 6px;
   color: #333;
@@ -84,7 +84,7 @@
     line-height: 15px;
     padding-top: 5px;
   }
-  
+
   .pattern-relateditems-result-path {
     display: block;
     color: #444;
